--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: isoms
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Extract isotope rations from high resultion proteomcis data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Alexey L. Chernobrovkin
+Maintainer: Alexey L. Chernobrovkin <chernobrovkin@gmail.com>
+Description: Package extracts immonium peaks from mass-spectra (mzML files),
+    looking at the fine structure of isopotic pattern and calculates the 
+    ratios of four satable isotopes: 13C/12C, 15N, 14N, 18O/16O, 2H/1H.
+License: CC
 Encoding: UTF-8
 LazyData: true
 Depends:
@@ -16,7 +17,8 @@ Depends:
     ggplot2,
     mzR,
     readr,
-    broom
+    broom,
+    parallel
 Imports:
     gridExtra,
     knitr,
